App.update updates

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,13 @@
 /* CSS Document */
-body {
-  
+.page {
+  overflow: auto;
+  background: #078CA2;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-
 .teacher-card-image.mdl-card {
   width: 256px;
   height: 256px;
@@ -18,6 +23,15 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
+
+.teacher-card-square.mdl-card {
+  width: 320px;
+  height: 320px;
+  margin: 10px auto;
+}
+.teacher-card-square > .mdl-card__title {
+  color: #fff;
+}
 .teacher-Bryce {
   background: url('../images/bryce.jpg') center / cover;
 }
@@ -27,28 +41,25 @@ body {
 .teacher-Ryan {
   background: url('../images/ryan.jpg') center / cover;
 }
-
 .mdl-button--fab.mdl-button--colored {
-  background: rgb(237, 7, 38);;
+  background: rgb(237, 7, 38);
+  ;
   color: #fff;
 }
-
 .controls {
-  width : 500px; 
-  display:flex; 
-  margin:20px auto;
+  width : 500px;
+  display: flex;
+  margin: 20px auto;
+}
+.controls > button {
+  width: 150px;
+  vertical-align: middle;
 }
 
-.controls > button {
-   width: 150px;
-   vertical-align:middle; 
-}
 @media screen and (max-width: 500px) {
 .controls {
-	width: 100%;
-  padding:20px;
-  margin:0 auto;
+  width: 100%;
+  padding: 20px;
+  margin: 0 auto;
 }
 }
-  
-  
